--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   logger: ^2.3.0
   appwrite: ^12.0.4
+  intl_phone_number_input: ^0.7.4
 
 
   # The following adds the Cupertino Icons font to your application.
