--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   appwrite: ^12.0.4
   intl_phone_number_input: ^0.7.4
   pinput: ^5.0.0
+  local_auth: ^2.2.0
+  flutter_screen_lock: ^9.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
