--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   pinput: ^5.0.0
   local_auth: ^2.2.0
   flutter_screen_lock: ^9.1.0
+  webview_flutter: ^4.8.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
