--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_messaging: ^15.0.3
   firebase_core: ^3.2.0
   firebase_auth: ^5.1.3
+  dio: ^5.5.0+1
 
 dev_dependencies:
   flutter_test:
