--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   local_auth: ^2.2.0
   flutter_screen_lock: ^9.1.0
   webview_flutter: ^4.8.0
+  unique_identifier: ^0.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
