--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   webview_flutter: ^4.8.0
   unique_identifier: ^0.3.0
   flutter_secure_storage: ^9.2.2
+  flutter_keyboard_visibility: ^6.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
