--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_core: ^3.2.0
   firebase_auth: ^5.1.3
   dio: ^5.5.0+1
+  # intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
