--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   firebase_auth: ^5.1.3
   dio: ^5.5.0+1
   # intl: ^0.19.0
+  flutter_rating_bar: ^4.0.1
+  share_plus: ^10.0.0
+  skeletonizer: ^1.4.2
 
 dev_dependencies:
   flutter_test:
