--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   share_plus: ^10.0.0
   skeletonizer: ^1.4.2
+  app_links: ^6.2.0
 
 dev_dependencies:
   flutter_test:
