--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   share_plus: ^10.0.0
   skeletonizer: ^1.4.2
   app_links: ^6.2.0
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
