--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   url_launcher: ^6.3.0
   carousel_slider: ^5.0.0
   video_player: ^2.9.1
+  connectivity_plus: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -87,6 +88,7 @@ flutter:
     - assets/svg/vuesax/bold/
     - assets/svg/vuesax/linear/
     - assets/svg/vuesax/bulk/
+    - assets/animalphoto/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
