--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   carousel_slider: ^5.0.0
   video_player: ^2.9.1
   connectivity_plus: ^6.0.5
+  argon2: ^1.0.1
 
 dev_dependencies:
   flutter_test:
