--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,9 @@ dependencies:
   video_player: ^2.9.1
   connectivity_plus: ^6.0.5
   argon2: ^1.0.1
+  # flutter_localizations:
+  #   sdk: flutter
+  flutter_localization: ^0.2.0
 
 dev_dependencies:
   flutter_test:
