--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   # flutter_localizations:
   #   sdk: flutter
   flutter_localization: ^0.2.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
