--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   #   sdk: flutter
   flutter_localization: ^0.2.0
   image_picker: ^1.1.2
+  dart_jsonwebtoken: ^2.14.0
 
 dev_dependencies:
   flutter_test:
