--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.lotteryCk</string>
+	<string>com.ck.lotto</string>
 	<key>PROJECT_ID</key>
 	<string>ck-app-2a1f7</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:199151369914:ios:9c6143a2faa64f9742cc83</string>
+	<string>1:199151369914:ios:dac0c854f049b2e242cc83</string>
 </dict>
 </plist>
