--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.0+4
+version: 1.1.1+9
 
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -65,6 +65,7 @@ dependencies:
   flutter_localization: ^0.2.0
   image_picker: ^1.1.2
   dart_jsonwebtoken: ^2.14.0
+  upgrader: ^10.3.0
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +77,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  change_app_package_name: ^1.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
