--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.0+31
+version: 1.2.0+32
 
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -87,8 +87,8 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 flutter_icons:
-  image_path: "assets/icon/ck-lotto.jpg"
-  android: "launcher_icon"
+  image_path: "assets/icon/icon.png"
+  android: "ic_launcher"
   ios: true
 
 # The following section is specific to Flutter packages.
@@ -101,6 +101,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/icon/
     - assets/svg/
     - assets/random/
     - assets/svg/vuesax/bold/
