--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,9 @@
+source 'https://github.com/volcengine/volcengine-specs.git'
+source 'https://github.com/byteplus-sdk/byteplus-specs.git'
+source 'https://cdn.cocoapods.org/'
+$FirebaseSDKVersion = '8.0.0'
 # Uncomment this line to define a global platform for your project
-platform :ios, '13.0'
+# platform :ios, '13.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
