--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   qr_flutter: ^4.1.0
   mobile_scanner: ^6.0.2
   flutter_windowmanager: ^0.2.0
+  flutter_local_notifications: ^18.0.1
 
 byteplus_vod:
   sub_spec: premium
