--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="29"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <!-- bytedance -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -19,6 +19,7 @@
         android:usesCleartextTraffic="true"
         android:enableOnBackInvokedCallback="false"
         android:allowBackup="false"
+        android:requestLegacyExternalStorage="true"
         android:fullBackupContent="false">
         <activity
             android:name=".MainActivity"
