--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -71,5 +71,6 @@
 
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app needs photos access to get QR code from photo library</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
 </dict>
 </plist>
