--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,9 @@ dependencies:
   mobile_scanner: ^6.0.2
   flutter_windowmanager: ^0.2.0
   flutter_local_notifications: ^18.0.1
+  barcode: ^2.2.8
+  path_provider: ^2.1.5
+  gal: ^2.3.1
 
 byteplus_vod:
   sub_spec: premium
