--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.0.0+36
+version: 2.0.0+38
 
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -34,6 +34,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   logger: ^2.3.0
   appwrite: ^12.0.4
+  # appwrite: ^14.0.0
+  # appwrite: ^13.0.0
   # intl_phone_number_input: ^0.7.4
   intl_phone_number_input:
     git:
@@ -51,7 +53,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   firebase_messaging: ^15.0.3
-  firebase_core: ^3.2.0
+  # firebase_messaging: ^15.2.2
+  # firebase_core: ^3.2.0
+  # firebase_core: ^3.11.0
+  firebase_core: ^3.4.0
   dio: ^5.5.0+1
   # intl: ^0.19.0
   flutter_rating_bar: ^4.0.1
@@ -61,7 +66,7 @@ dependencies:
   url_launcher: ^6.3.0
   carousel_slider: ^5.0.0
   video_player: ^2.9.1
-  connectivity_plus: ^6.1.1
+  connectivity_plus: ^6.1.3
   argon2: ^1.0.1
   # flutter_localizations:
   #   sdk: flutter
@@ -82,6 +87,7 @@ dependencies:
   barcode: ^2.2.8
   path_provider: ^2.1.5
   gal: ^2.3.1
+  geolocator: ^12.0.0
 
 byteplus_vod:
   sub_spec: premium
