--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,8 @@ dependencies:
   path_provider: ^2.1.5
   gal: ^2.3.1
   geolocator: ^12.0.0
+  flutter_fortune_wheel: ^1.3.2
+  flutter_inappwebview: 5.7.2+3
 
 byteplus_vod:
   sub_spec: premium
